server/app/assets/sass/nav.sass
@import "components/_color"
@import "components/_variables"
@import "main"

$dark-base: #212121
$dark-lighten-1: #303030
$dark-lighten-2: #424242
$white: #ffffff

body
  padding-left: 320px

@media #{$medium-and-down}
  body
    padding-left: 0

#toolbar
  min-height: 68px
  z-index: 100
  position: relative

  .nav-wrapper
    margin-left: 1%

  #search-tb
    margin-left: 15%

#nav-logo-container
  position: relative

  #name-field
    position: absolute
    max-width: 320px
    left: 30%
    top: 28%

    @media #{$medium-and-down}
      top: 14%

  #email-field
    position: absolute
    max-width: 220px
    left: 30%
    top: 44%

    @media #{$medium-and-down}
      top: 28%

  #nav-logo
    position: absolute
    left: 8%
    top: 20%
    width: 18%
    height: auto

#slide-out
  width: 320px
  background-color: $dark-lighten-1
  span
    color: $white

  h4
    color: color("orange", "darken-2")
    font-family: good-times, Arial, sans-serif

  .btn-flat
    background-color: $dark-lighten-1

  li
    background-color: $dark-lighten-1
    a
      color: white

  li:hover
    a
      color: $primary-color-light

  li.active
    color: $primary-color-light
    background-color: $dark-lighten-2
    border-left: 4px solid $primary-color
    padding-left: 11px
    a
      color: $primary-color-light
      background: $dark-lighten-2

